--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,23 @@ dependencies:
   # Location & Maps
   geolocator: ^13.0.2
   
+  # Payment Processing
+  stripe_payment: ^1.1.4
+  razorpay_flutter: ^1.3.7
+  flutter_paypal_checkout: ^1.0.2
+  
+  # Shipping & Logistics
+  dio_certificate_pinning: ^4.1.0
+  
+  # Security & Encryption
+  encrypt: ^5.0.3
+  pointycastle: ^3.9.1
+  crypto_keys: ^0.3.0+1
+  
   # Utilities
   url_launcher: ^6.3.1
+  uuid: ^4.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
