--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,12 +76,9 @@ dependencies:
   geolocator: ^13.0.2
   
   # Payment Processing
-  stripe_payment: ^1.1.4
   razorpay_flutter: ^1.3.7
-  flutter_paypal_checkout: ^1.0.2
   
   # Shipping & Logistics
-  dio_certificate_pinning: ^4.1.0
   
   # Security & Encryption
   encrypt: ^5.0.3
@@ -89,22 +86,19 @@ dependencies:
   crypto_keys: ^0.3.0+1
   
   # Advanced Authentication
-  local_auth: ^2.3.0
-  firebase_auth: ^5.3.3
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.2
   otp: ^3.1.4
   qr_code_scanner: ^1.0.1
   
   # Push Notifications & Messaging
-  firebase_messaging: ^15.1.4
   flutter_local_notifications: ^17.2.3
-  pusher_channels_flutter: ^2.2.1
+  # pusher_channels_flutter: ^2.2.1  # Removed due to JS interop issues
   
   # Localization & Accessibility
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   easy_localization: ^3.0.7
   flutter_tts: ^4.0.2
   
